--- a/Honest-Emoji-face-detection/index.html
+++ b/Honest-Emoji-face-detection/index.html
@@ -26,5 +26,6 @@
   </head>
   <body>
     <video id="video" width="920" height="760" autoplay muted></video>
+    <script src="https://unpkg.com/@pusher/chatkit-client@1/dist/web/chatkit.js"></script>
   </body>
 </html>
